# minterpy-levelsets

./: .gitignore  .todo.md  AUTHORS.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/: 0_Benchmark_algebraic_varieties.ipynb  0_Tests_on_algebraic_varieties.ipynb  1_Benchmark_curvature_on_algebraic_varieties.ipynb  1_Sampling_points_from_implicit_equation.ipynb  2_Mean curvature_flow.ipynb
src/minterpy-levelsets/: __init__.py  pointcloud_utils.py  sympy_utils.py
src/minterpy_levelsets/: __init__.py  levelset_poly.py  pointcloud_utils.py  sympy_utils.py
