[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minterpy-levelsets"
version = "0.0.1"
authors = [
  { name="Sachin Krishnan Thekke Veettil", email="sthekke@mpi-cbg.de" },
]
description = "Levelset extensions for the minterpy library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://gitlab.hzdr.de/interpol/minterpy-levelsets"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools_scm]
write_to = "src/minterpy-levelsets/version.py"
