[build-system]
requires = ["wheel", "setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "minterpy_levelsets"
version = "0.1.0"
authors = [
  { name="Sachin Krishnan Thekke Veettil", email="sthekke@mpi-cbg.de" },
]
description = "Levelset extensions for the minterpy library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://codebase.helmholtz.cloud/interpol/minterpy-levelsets"
"Bug Tracker" = "https://codebase.helmholtz.cloud/interpol/minterpy-levelsets/-/issues"

[tool.setuptools_scm]
write_to = "src/minterpy_levelsets/version.py"
