[metadata]
name = minterpy_levelsets
description = Python library for global polynomial levelsets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://codebase.helmholtz.cloud/interpol/minterpy-levelsets
author = file: AUTHORS.md
author_email = sthekke@mpi-cbg.de
maintainer = Sachin Krishnan Thekke Veettil
maintainer_email = sthekke@mpi-cbg.de
license = MIT
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://codebase.helmholtz.cloud/interpol/minterpy-levelsets/-/issues

[options]
packages = find:
install_requires =
    attrs>=20.3.0
    matplotlib>=3.4.2
    numba>=0.53.1
    numpy>=1.13.3
    pytest>=4.6
    pytest-cov>=2.12.0
    scipy>=1.6.3
    minterpy>=0.2.0a0
    sympy>=1.11.1
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

